[package]
name = "airport-crush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["sync"]

